--- a/Idle Factory/UpgradeFactory/UpgradeFactoryScene.storyboard
+++ b/Idle Factory/UpgradeFactory/UpgradeFactoryScene.storyboard
@@ -34,29 +34,22 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bOr-wD-CJg">
                                         <rect key="frame" x="0.0" y="0.0" width="144" height="24"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="144" id="4A4-4o-1rb"/>
-                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Button">
-                                            <fontDescription key="titleFontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="10"/>
-                                        </buttonConfiguration>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qT3-4n-Y0z">
                                         <rect key="frame" x="153" y="0.0" width="144" height="24"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="144" id="TL7-lc-6Q8"/>
-                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Button">
-                                            <fontDescription key="titleFontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="10"/>
-                                        </buttonConfiguration>
                                     </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="UPK-1c-nqR"/>
+                                    <constraint firstAttribute="width" constant="297" id="lKk-Z9-X7y"/>
                                 </constraints>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nHu-41-Guf">
@@ -84,11 +77,11 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="MI5-wc-PBN">
-                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="31"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="33"/>
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sTj-xf-eYq">
-                                                            <rect key="frame" x="0.0" y="0.0" width="100" height="22"/>
-                                                            <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="10"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="100" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                             <state key="normal" title="Upgrade"/>
@@ -97,7 +90,7 @@
                                                             </connections>
                                                         </button>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="hx3-vd-l2e">
-                                                            <rect key="frame" x="0.0" y="22" width="100" height="9"/>
+                                                            <rect key="frame" x="0.0" y="24" width="100" height="9"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Coin" translatesAutoresizingMaskIntoConstraints="NO" id="K8L-3D-SSh">
                                                                     <rect key="frame" x="0.0" y="0.0" width="50" height="9"/>
@@ -187,13 +180,12 @@
                             <constraint firstItem="Tft-Z6-61q" firstAttribute="top" secondItem="xZr-9J-9Kx" secondAttribute="bottom" constant="25" id="LTx-kf-qdY"/>
                             <constraint firstItem="nHu-41-Guf" firstAttribute="leading" secondItem="xZr-9J-9Kx" secondAttribute="trailing" constant="57" id="NRv-yk-fQL"/>
                             <constraint firstItem="nHu-41-Guf" firstAttribute="leading" secondItem="Tft-Z6-61q" secondAttribute="trailing" constant="20" id="Nma-Dn-FNm"/>
-                            <constraint firstItem="3ax-gh-cGC" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="725" id="Rn0-UJ-LRo"/>
                             <constraint firstItem="GyE-cM-Qju" firstAttribute="trailing" secondItem="3ax-gh-cGC" secondAttribute="trailing" id="WzY-4C-2wB"/>
                             <constraint firstItem="GyE-cM-Qju" firstAttribute="top" secondItem="3ax-gh-cGC" secondAttribute="bottom" constant="59" id="bRz-kX-Stp"/>
                             <constraint firstItem="xZr-9J-9Kx" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="107" id="cGg-8L-SfE"/>
                             <constraint firstItem="xZr-9J-9Kx" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="147" id="gYV-Vx-NFK"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="GyE-cM-Qju" secondAttribute="bottom" constant="75" id="lLw-DY-y6H"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="3ax-gh-cGC" secondAttribute="trailing" constant="16" id="o9W-yL-NQX"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="GyE-cM-Qju" secondAttribute="trailing" constant="16" id="rbp-cK-8br"/>
                             <constraint firstItem="Rc0-jP-p1Y" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="topMargin" constant="96.5" id="stS-hF-rJB"/>
                             <constraint firstItem="nHu-41-Guf" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="topMargin" constant="96.5" id="uj7-39-inz"/>
                         </constraints>
