--- a/Idle Factory/HUD/HUD Actions/GameInventoryScene/GameInventoryScene.storyboard
+++ b/Idle Factory/HUD/HUD Actions/GameInventoryScene/GameInventoryScene.storyboard
@@ -44,10 +44,10 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="87Q-MC-7hz">
-                                <rect key="frame" x="66" y="125" width="751" height="218"/>
+                                <rect key="frame" x="66" y="125" width="751" height="192"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rF0-R9-7mq">
-                                        <rect key="frame" x="0.0" y="0.0" width="476" height="218"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="476" height="192"/>
                                         <color key="backgroundColor" name="Inventory_background"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="192" id="eWv-ah-4hf"/>
@@ -150,7 +150,7 @@
                                         </cells>
                                     </collectionView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YPY-6k-DAS">
-                                        <rect key="frame" x="488" y="0.0" width="263" height="218"/>
+                                        <rect key="frame" x="488" y="0.0" width="263" height="192"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clear" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="BVk-6t-fCk">
                                                 <rect key="frame" x="35" y="30" width="72" height="69.5"/>
@@ -292,10 +292,10 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mcP-nv-UTS">
-                                                <rect key="frame" x="20" y="117" width="223" height="85"/>
+                                                <rect key="frame" x="20" y="117" width="223" height="59"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="f0a-rS-gMb">
-                                                        <rect key="frame" x="48.5" y="0.0" width="126" height="53"/>
+                                                        <rect key="frame" x="48.5" y="0.0" width="126" height="27"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="7hu-FV-1ao">
                                                                 <rect key="frame" x="0.0" y="0.0" width="126" height="11"/>
@@ -325,7 +325,7 @@
                                                                 </constraints>
                                                             </stackView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sYK-Jo-vSg">
-                                                                <rect key="frame" x="58" y="16" width="10.5" height="37"/>
+                                                                <rect key="frame" x="58" y="16" width="10.5" height="11"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="6"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -333,7 +333,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Kj2-qb-5ia">
-                                                        <rect key="frame" x="6.5" y="63" width="210" height="22"/>
+                                                        <rect key="frame" x="6.5" y="37" width="210" height="22"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RQv-O2-zY4">
                                                                 <rect key="frame" x="0.0" y="0.0" width="100" height="22"/>
@@ -347,6 +347,9 @@
                                                                 <state key="normal" title="Vender Fabrica">
                                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </state>
+                                                                <connections>
+                                                                    <action selector="quickSell:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="zYa-G2-P2I"/>
+                                                                </connections>
                                                             </button>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rFW-M6-DaA">
                                                                 <rect key="frame" x="110" y="0.0" width="100" height="22"/>
@@ -360,6 +363,9 @@
                                                                 <state key="normal" title="Colocar no Parque">
                                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </state>
+                                                                <connections>
+                                                                    <action selector="insertOrAnnounceFactory:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="uh7-P1-YCK"/>
+                                                                </connections>
                                                             </button>
                                                         </subviews>
                                                     </stackView>
@@ -408,7 +414,6 @@
                             <constraint firstItem="bWn-IA-vOF" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="hfm-wL-o0x"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="55m-EB-zmS" secondAttribute="trailing" constant="10" id="ipZ-gW-7ov"/>
                             <constraint firstItem="bWn-IA-vOF" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="59" id="v6A-Zv-BGy"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="87Q-MC-7hz" secondAttribute="bottom" constant="50" id="yrc-Bj-6aN"/>
                         </constraints>
                     </view>
                     <connections>
