--- a/Idle Factory/HUD/HUD Actions Scenes/GameInventoryScene/GameInventoryScene.storyboard
+++ b/Idle Factory/HUD/HUD Actions Scenes/GameInventoryScene/GameInventoryScene.storyboard
@@ -51,7 +51,7 @@
                                     <constraint firstAttribute="height" constant="27" id="RGn-jT-HV2"/>
                                 </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="55m-EB-zmS">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="55m-EB-zmS">
                                 <rect key="frame" x="797" y="44" width="45" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="55m-EB-zmS" secondAttribute="height" multiplier="1:1" id="99y-bU-jmI"/>
