--- a/Idle Factory/FactoryDetails/FactoryDetailScene.storyboard
+++ b/Idle Factory/FactoryDetails/FactoryDetailScene.storyboard
@@ -57,7 +57,7 @@
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="xPC-09-vaa">
                                                             <rect key="frame" x="5" y="5.5" width="24" height="29"/>
-                                                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="24" id="ie2-QW-orU"/>
                                                                 <constraint firstAttribute="width" constant="24" id="whk-RK-yZc"/>
@@ -69,7 +69,7 @@
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yrx-c0-BEP">
                                                                     <rect key="frame" x="0.0" y="0.0" width="35.5" height="13"/>
                                                                     <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="13"/>
-                                                                    <nil key="textColor"/>
+                                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Ayn-RY-Xon">
@@ -85,7 +85,7 @@
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mg9-Ca-BFk">
                                                                             <rect key="frame" x="11" y="3.5" width="24.5" height="10"/>
                                                                             <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="10"/>
-                                                                            <nil key="textColor"/>
+                                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                     </subviews>
@@ -127,6 +127,10 @@
                                     <constraint firstAttribute="bottom" secondItem="VSP-EM-eUT" secondAttribute="bottom" constant="34.5" id="xpA-Lq-x8w"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3vp-La-CVn">
+                                <rect key="frame" x="426" y="326" width="158" height="64"/>
+                                <color key="backgroundColor" name="Marketplace_background"/>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0GZ-Ut-UXT">
                                 <rect key="frame" x="781.5" y="41" width="55.5" height="45"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -150,25 +154,25 @@
                                     <action selector="buyAction:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="pG9-Wj-l35"/>
                                 </connections>
                             </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="fQI-BB-ppd">
-                                <rect key="frame" x="434" y="333" width="152" height="50"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="fQI-BB-ppd">
+                                <rect key="frame" x="424" y="333" width="162" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M86-cG-2rv">
                                         <rect key="frame" x="0.0" y="0.0" width="49" height="50"/>
                                         <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="20"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rP9-QE-6mP">
-                                        <rect key="frame" x="51" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="56" y="0.0" width="50" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="rP9-QE-6mP" secondAttribute="height" multiplier="1:1" id="F0L-Xz-fa2"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Huz-Hq-tXj">
-                                        <rect key="frame" x="103" y="0.0" width="49" height="50"/>
+                                        <rect key="frame" x="113" y="0.0" width="49" height="50"/>
                                         <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="20"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -247,7 +251,7 @@
                                     <constraint firstAttribute="height" constant="31" id="ner-oP-NfQ"/>
                                 </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P5k-7M-A3n">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P5k-7M-A3n">
                                 <rect key="frame" x="59" y="41" width="55.5" height="45"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="back"/>
@@ -261,6 +265,7 @@
                         <color key="backgroundColor" name="Marketplace_background"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="ncd-Iu-cMB" secondAttribute="bottom" constant="47" id="1Pq-qa-daP"/>
+                            <constraint firstItem="3vp-La-CVn" firstAttribute="width" secondItem="Mni-es-HOv" secondAttribute="width" multiplier="0.5" id="3u1-qU-86R"/>
                             <constraint firstItem="ncd-Iu-cMB" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="100" id="4Lj-LX-YpH"/>
                             <constraint firstItem="sWr-DH-FU2" firstAttribute="leading" secondItem="fQI-BB-ppd" secondAttribute="trailing" constant="21" id="5s7-nB-rOc"/>
                             <constraint firstItem="P5k-7M-A3n" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="15" id="9JL-bn-ZW2"/>
@@ -268,10 +273,13 @@
                             <constraint firstItem="0GZ-Ut-UXT" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="41" id="JEm-TW-yPF"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0GZ-Ut-UXT" secondAttribute="trailing" constant="15" id="M1u-S9-EzR"/>
                             <constraint firstItem="Mni-es-HOv" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="NOm-FA-cyO"/>
+                            <constraint firstItem="3vp-La-CVn" firstAttribute="centerX" secondItem="fQI-BB-ppd" secondAttribute="centerX" id="Nze-SO-mhI"/>
                             <constraint firstItem="sWr-DH-FU2" firstAttribute="top" secondItem="ncd-Iu-cMB" secondAttribute="bottom" constant="-15" id="VaQ-WP-BTM"/>
+                            <constraint firstItem="3vp-La-CVn" firstAttribute="centerY" secondItem="fQI-BB-ppd" secondAttribute="centerY" id="Zud-Cv-0g0"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="ncd-Iu-cMB" secondAttribute="trailing" constant="100" id="gCJ-Z9-Yfv"/>
                             <constraint firstItem="ncd-Iu-cMB" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="110" id="glr-oh-tWx"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="sWr-DH-FU2" secondAttribute="trailing" constant="158" id="hOy-eK-uK6"/>
+                            <constraint firstItem="3vp-La-CVn" firstAttribute="height" secondItem="fQI-BB-ppd" secondAttribute="height" multiplier="1.28" id="pyO-Yc-aQX"/>
                             <constraint firstItem="P5k-7M-A3n" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="41" id="qPR-VB-c0Z"/>
                             <constraint firstItem="Mni-es-HOv" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="45" id="yXE-vo-8dt"/>
                         </constraints>
